# SafeKafka

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  PRESENTATION_UPDATE_CHECKLIST.md  README.md  RUBRIC.md  ablation_results.json  ablation_results.md  checlist.md  clips_manifest.csv  docker-compose.yml  eval_head.json  eval_hiera.json  eval_mvit.json  eval_results_temporal.json  eval_streaming.json  eval_swin3d.json  eval_video.json  findings.tex  paper.tex  pyproject.toml  requirements.txt  stream_head.json  stream_hiera.json  stream_mvit.json  stream_swin3d.json  stream_video.json  stream_yolo.json  systems_lag.json  systems_payload.json  systems_runtime.json
previous_weights/: best.pt
safestream/: __init__.py  settings.py
safestream/aggregator/: __init__.py  __main__.py  aggregator.py
safestream/common/: encoding.py  kafka_clients.py  labels.py
safestream/dashboard/: __main__.py
safestream/detector/: __main__.py  temporal.py
safestream/producer/: __main__.py
safestream/temporal/: __init__.py  dataset.py  model.py
scripts/: ablation.py  benchmark_payload.py  build_clip_manifest.py  create_topics.py  download_dataset.py  evaluate.py  evaluate_streaming.py  evaluate_temporal.py  generate_aaic_poster.py  measure_lag.py  peek.py  prepare_dataset.py  spike_burst.py  train_temporal.py  train_yolo.py
scripts/assets/: architecture.mmd  streaming_evaluation.mmd
tests/: test_aggregator.py
yolo_dataset/: dataset.yaml
yolo_dataset/train/: labels.cache
yolo_dataset/val/: labels.cache
yolo_dataset_old/: dataset.yaml
(+1 files in other folders)
