[project]
name = "safekafka"
version = "0.1.0"
requires-python = ">=3.10,<3.13"
dependencies = [
    "confluent-kafka>=2.4.0",
    "python-dotenv>=1.0.0",
    "ultralytics>=8.2.0",
    "opencv-python>=4.9.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "hiera-transformer>=0.1.4",
    "Pillow>=10.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    "jinja2>=3.1.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "rich>=13.7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
